objects/Opportunity_Offer__c.object
<CustomObject>
    <fields>
        <fullName>Approx__c</fullName>
        <label>Approx Audio $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Model__c</fullName>
        <label>Billing Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Billing</fullName>
                </value>
                <value>
                    <fullName>Quarterly Billing</fullName>
                </value>
                <value>
                    <fullName>Monthly Billing</fullName>
                </value>
                <value>
                    <fullName>Prepaid Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buying_Program__c</fullName>
        <label>Buying Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advantage</fullName>
                </value>
                <value>
                    <fullName>C1 ELA</fullName>
                </value>
                <value>
                    <fullName>Transactional</fullName>
                </value>
                <value>
                    <fullName>Online Direct</fullName>
                </value>
                <value>
                    <fullName>Online CSP</fullName>
                </value>
                <value>
                    <fullName>SOW</fullName>
                </value>
                <value>
                    <fullName>Cloud Service Broker</fullName>
                </value>
                <value>
                    <fullName>SPLA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Opportunity_Offer_Key__c</fullName>
        <externalId>true</externalId>
        <label>External Opportunity Offer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Term__c</fullName>
        <label>Initial Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrated_with_CCW__c</fullName>
        <label>Integrated with CCW</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Monetization_Type__c</fullName>
        <label>Monetization Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Active_Hosts__c</fullName>
        <label># of Active Hosts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label># of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Named_Hosts__c</fullName>
        <label># of Named Hosts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Named_Users_Proposed__c</fullName>
        <label># of Named Users (Proposed)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Named_Users__c</fullName>
        <label># of Named Users (Current)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_PMP__c</fullName>
        <label># of PMP Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Ports__c</fullName>
        <label># of Ports</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Seats__c</fullName>
        <label># of Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_TC_Hosts__c</fullName>
        <label># of TC Hosts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfferType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer Type</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>(1 OR 2) AND 3</booleanFilter>
            <filterItems>
                <field>Master_Offer__c.Recurring_Offer__c</field>
                <operation>equals</operation>
                <value>Yes</value>
            </filterItems>
            <filterItems>
                <field>Master_Offer__c.Recurring_Offer__c</field>
                <operation>equals</operation>
                <value>No</value>
            </filterItems>
            <filterItems>
                <field>Master_Offer__c.Visible__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Offer__c</referenceTo>
        <relationshipLabel>Opportunity Offers</relationshipLabel>
        <relationshipName>Opportunity_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offer_Description__c</fullName>
        <formula>OfferType__r.Offer_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Type_Value__c</fullName>
        <description>OfferType__r.Name</description>
        <formula>OfferType__r.Name</formula>
        <label>Offer Type Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>Describes Opportunity name</description>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Offer_Value__c</fullName>
        <inlineHelpText>Value should be in whole dollars</inlineHelpText>
        <label>Product Offer Value($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuoteId__c</fullName>
        <label>Quote ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Charge__c</fullName>
        <label>Recurring Charge ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Offer_SFDC__c</fullName>
        <label>Recurring Offer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recurring_Offer__c</fullName>
        <formula>TEXT(OfferType__r.Recurring_Offer__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Offer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Term__c</fullName>
        <label>Renewal Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Start_Date__c</fullName>
        <description>Describes Requested start date</description>
        <label>Requested Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Motion__c</fullName>
        <label>Sales Motion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Offer_Value__c</fullName>
        <inlineHelpText>Value should be in whole dollars</inlineHelpText>
        <label>Service Offer Value($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Suite__c</fullName>
        <label>Suite</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access-Switching</fullName>
                </value>
                <value>
                    <fullName>Access Wireless</fullName>
                </value>
                <value>
                    <fullName>Advantage</fullName>
                </value>
                <value>
                    <fullName>Data Center</fullName>
                </value>
                <value>
                    <fullName>Data Center Cloud</fullName>
                </value>
                <value>
                    <fullName>Data Center Compute</fullName>
                </value>
                <value>
                    <fullName>Data Center Networking</fullName>
                </value>
                <value>
                    <fullName>WAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Type__c</fullName>
        <formula>TEXT(OfferType__r.Term_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add capacity</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
                <value>
                    <fullName>ADV</fullName>
                </value>
                <value>
                    <fullName>security</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Advantage</fullName>
                </value>
                <value>
                    <fullName>Essentials</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>MLB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Offer__c</fullName>
        <description>Adds the value in the two fields and stores it in 'Total Offer Value ($)' field</description>
        <formula>BLANKVALUE (  Product_Offer_Value__c,0 )  + BLANKVALUE (  Service_Offer_Value__c,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Offer Value ($) is the sum of the Product Offer Value ($) and the Service Offer Value ($).</inlineHelpText>
        <label>Total Offer Value ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <description>Quote Integration: Opportunity Offers associated to Opportunity
CCW Payload Mapping : subscriptionDetail</description>
    <label>Opportunity Offer</label>
    <nameField>
        <label>Selected Offer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>CCW</fullName>
        <active>true</active>
        <label>CCW</label>
    </recordTypes>
    <recordTypes>
        <fullName>SFDC</fullName>
        <active>true</active>
        <label>SFDC</label>
    </recordTypes>
    <validationRules>
        <fullName>Billing_Model_on_Recurring_charge</fullName>
        <active>true</active>
        <description>If Recurring Charge ($) is not blank, then Bliiling Model is a required field.</description>
        <errorConditionFormula>Recurring_Charge__c &gt; 0 &amp;&amp; ISPICKVAL( Billing_Model__c ,"")</errorConditionFormula>
        <errorMessage>Billing Model is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Offer_Cant_GT_Expected_Products</fullName>
        <active>true</active>
        <description>Validate : if (Product Offer Value ($)/1000) &gt; (Opportunity Expected Product)</description>
        <errorConditionFormula>IF(
	AND(ISBLANK(Opportunity_Name__r.Expected_Product__c), NOT(ISBLANK(Product_Offer_Value__c))),
	true,
	IF(( Product_Offer_Value__c / 1000)&gt;(Opportunity_Name__r.Expected_Product__c),
		true,
		false
	)
)</errorConditionFormula>
        <errorMessage>Product Offer Value cannot be greater than the opportunity Expected Product amount.  Please adjust the Product Offer Value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Offer_Cant_GT_Expected_Service</fullName>
        <active>true</active>
        <description>Validate : if (Service Offer Value ($)/1000) &gt; (Opportunity Expected Service)</description>
        <errorConditionFormula>IF(
	AND(ISBLANK(Opportunity_Name__r.Expected_Service__c), NOT(ISBLANK(Service_Offer_Value__c))),
	true,
	IF(( Service_Offer_Value__c / 1000)&gt;(Opportunity_Name__r.Expected_Service__c),
		true,
		false
	)
)</errorConditionFormula>
        <errorMessage>Service Offer Value cannot be greater than the opportunity Expected Service amount.  Please adjust the Service Offer Value.</errorMessage>
    </validationRules>
</CustomObject>